<resources>
    <string name="app_name">Budget</string>
    <string name="welcome">Welcome to the budget app!</string>
    <string name="prompt">Please enter your budget information</string>
    <string name="income">Monthly Income</string>
    <string name="bills">Rent and Bills</string>
    <string name="groceries">Weekly Grocery Budget</string>
    <string name="savings">Saving Percentage</string>
    <string name="calculate">Calculate Weekly Budget</string>

    <string name="item_input">What did you spend on?</string>
    <string name="submit">Submit</string>
    <string name="spend_input">How much did you spend?</string>
    <string name="progress_message">Here\'s your weekly budget</string>
    <string name="settings">Update Expenses</string>
    <string name="location">Set Home Location</string>
    <string name="settings_title">Settings</string>
    <string name="save">Save Changes</string>
    <string name="addressPrompt">Please enter your address</string>
    <string name="locations_button">Find Location</string>

    <string name="action_about">About</string>
    <string name="title_activity_calculation">Budget</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_statistic">Statistic</string>
    <string name="title_activity_expense">Expense</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">Profile</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Log In</string>
    <string name="action_logout">Log Out</string>

    <string name="password_hint">Password</string>
    <string name="repassword_hint">Confirm Password</string>
    <string name="email_hint">Email</string>
    <string name="signup_button_label">Register</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_password_message">Passwords do not match!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="sign_up_text">Have Not Been Registered?</string>
    <string name="add_item">Add New Item</string>

</resources>
