<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.csulb.android.budget.MainActivity">


    <TextView
        android:id="@+id/tSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="16dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:id="@+id/prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/prompt"
        android:textColor="@color/black"
        android:layout_below="@+id/tSettings"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/eMonthly"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prompt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />

    <EditText
        android:id="@+id/eBills"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eMonthly"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/eGrocery"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eBills"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <EditText
        android:id="@+id/eSaving"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eGrocery"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />


    <Button
        android:id="@+id/bSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="onClick"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_above="@+id/bSave"
        android:layout_toEndOf="@+id/eGrocery"
        android:layout_marginBottom="27dp" />

    <TextView
        android:id="@+id/tMonthlyIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/income"
        android:layout_below="@+id/prompt"
        android:textColor="@color/black"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tBills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/eMonthly"
        android:textColor="@color/black"
        android:text="@string/bills" />

    <TextView
        android:id="@+id/tGroceries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/eBills"
        android:textColor="@color/black"
        android:text="@string/groceries" />

    <TextView
        android:id="@+id/tSavings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/eGrocery"
        android:textColor="@color/black"
        android:text="@string/savings" />
</RelativeLayout>
