<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvWeeklyBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvProgress"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:textColor="@color/black"
        android:text="@string/progress_message" />

    <ProgressBar
        android:id="@+id/pbProgress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:minHeight="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edtSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pbProgress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:inputType="number"
        android:textSize="18sp"
        android:hint="@string/spend_input" />

    <EditText
        android:id="@+id/edtItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtSpent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:inputType="number"
        android:textSize="18sp"
        android:hint="@string/item_input" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtItem"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pbProgress"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textSize="30sp"
        android:layout_above="@+id/edtSpent" />

</RelativeLayout>